@@ -55,6 +55,16 @@ Alpha::Alpha(const Glib::RefPtr<Timeline>& timeline, const SlotAlphaFunc& slot)
   set_func(slot);
 }
 
+Alpha::Alpha(const Glib::RefPtr<Timeline>& timeline, ClutterAlphaFunc callback)
+:
+  _CONSTRUCT()
+{
+  _INITIALLY_UNOWNED_SINK
+  set_timeline(timeline);
+  clutter_alpha_set_func(gobj(), callback, NULL, NULL);
+}
+
+
 void Alpha::set_func(const SlotAlphaFunc& slot)
 {
   //Create a copy of the slot. A pointer to this will be passed through the callback's data parameter.
